- favorite teleports now save upon logging out